@@ -1,3 +1,9 @@
+2012-06-14  NOKUBI Takatsugu  <knok@daionet.gr.jp>
+
+	* lib/chalib.c (chasen_sparse_main): 
+	fix buffer overflow 
+	JVN#16901583 https://jvn.jp/jp/JVN16901583/index.html
+
 2007-07-23  Asahara Masayuki  <masayu-a@is.naist.jp>
 
 	* lib/tokenizer.c (cha_tok_parse): 
